# manga-image-translator

./: .dockerignore  .env.sample  .gitignore  .gitmodules  AGENTS.md  Automate.ipynb  CHANGELOG.md  CHANGELOG_CN.md  CLAUDE.md  CRAFT_resnet34.py  DBHead.py  DBNet_resnet101.py  DBNet_resnet34.py  Dockerfile  Dockerfile.moeflow_worker  GPT.config  Installer for Windows CPU.bat  Installer for Windows CUDA.bat  Makefile  Makefile.moeflow.mk  Makefile.shared.mk  MangaStudio.py  MangaStudioMain.py  MangaStudioMainRun.bat  MangaStudioRun.bat  Open Prompt.bat  README.md  README_CN.md  README_EN.md  README_moeflow_companion.md  README_moeflow_worker.md  alphabet-all-v5.txt  api-test.html  baidutrans.py  conda.working.yaml  conda.yaml  dbnet_utils.py  docker-compose.debug.yml  docker-compose.yml  docker_prepare.py  (+50 more)
.claude/: settings.json
.github/: FUNDING.yml  run.bat
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bandit.yml  ci.yml  codeql.yml  mit-worker-image.yml  on_pull_request.yaml  release.yml  stale.yml
MangaStudio_Data/: README.md  tasks.json  ui_map.json
MangaStudio_Data/dicts/: example_post_dict.txt  example_pre_dict.txt
MangaStudio_Data/gpt_configs/: my_cool_prompt.yaml
MangaStudio_Data/profiles/: Admin Preset (Creator's custom config - hardware dependent).json
MangaStudio_Data/themes/: abyssal_depths.json  classic_paper.json  default_dark.json  dracula.json  emerald_sea.json  golden_sands.json  graphite.json  lavender_dream.json  matrix_code.json  minty_fresh.json  nordic_noir.json  ocean_breeze.json  ruby_glow.json  sakura_sunset.json  solarized_light.json
demo/api/: browserscreen-translate.js
demo/doc/: docker-compose-local-dev.yml  docker-compose-web-with-cpu.yml  docker-compose-web-with-gpu.yml
deploy/: README.md  __init__.py  deploy.sh  modal_app.py  modal_config.py  prepare_models.py  smoke_test.py
detection/: DBNet_resnet34.py  __init__.py  common.py  craft_utils.py  ctd.py  dbnet_utils.py  default.py  imgproc.py
detection/ctd_utils/: __init__.py  basemodel.py  textblock.py  textmask.py
devscripts/: make_readme.py  utils.py
dict/: galtransl_dict.txt  mit_glossary.txt  mit_glossory.txt  post_dict.txt  pre_dict.txt  sakura_dict.txt
examples/: Example.env  MONGOLIAN_TRANSLATION_GUIDE.md  config-example.json  config-example.toml  gpt_config-example.yaml  response.rs  translator_chain_example.json
fonts/: __init__.py
front/: .dockerignore  Dockerfile  README.md  README_CN.md  package-lock.json  package.json  react-router.config.ts  tsconfig.json  vite.config.ts
inpainting/: __init__.py  common.py  inpainting_aot.py  inpainting_attn.py  inpainting_lama.py  inpainting_lama_mpe.py  none.py
manga_translator/: __init__.py  __main__.py  args.py  config.py  manga_translator.py  save.py  share.py  test_manga_translator.py  translate_demo.py  utils.py  web_main.py
mask_refinement/: __init__.py  text_mask_utils.py
mit_moeflow/: __init__.py  export_moeflow_project.py  model.py
moeflow_companion/: __init__.py  utils.py
ocr/: __init__.py  common.py  model_32px.py  model_48px.py  model_48px_ctc.py  model_48px_v2.py  model_ocr_large.py  ocr.py
pip-modules/mit-renderer/: .gitignore  pyproject.toml  setup.py
pip-modules/mit-renderer/mit_renderer/utils/: __init__.py
server/: args.py  index.html  instance.py  main.py  manual.html  myqueue.py  request_extraction.py  response.cpp  sent_data.py  sent_data_internal.py  streaming.py  to_json.py
test/: README.md  api_test.html  conftest.py  test_detection_manual.py  test_render.py  test_rendering.py  test_textline_merge.py  test_translate.py  test_translation.py  test_translation_manual.py  utils.py
text_mask/: __init__.py  text_mask_utils.py
text_rendering/: __init__.py  ballon_extractor.py  text_render.py  text_render_eng.py
textblockdetector/: __init__.py  basemodel.py  textblock.py  textmask.py
textline_merge/: __init__.py
textmask_refinement/: __init__.py
training/: all-fonts.txt
translators/: __init__.py  baidu.py  common.py  deepl.py  google.py  google_gtoken.py  jparacrawl.py  keys.py  nllb.py  nnlb.py  no.py  none.py  null.py  offline.py  original.py  papago.py  selective.py  sugoi.py  youdao.py
upscaling/: __init__.py  common.py  waifu2x.py
userscript/: EXAMPLES.md  INSTALL.md  README.md  manga-translator.user.js
(+275 files in other folders)
